Changig git attributs so lan. wont be JavaScript

--- a/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
@@ -12,7 +12,7 @@
 
 @if (!Model.Any())
 {
-	<h1 class="text-center">There are no pages.</h1>
+	<h1 class="text-center">There are no pages...</h1>
 }
 else
 {
