Added a Add Page so admin can add page.

--- a/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Pages</h2>
 
 <p>
-	@Html.ActionLink("Add New Page", "AddPage")
+	@Html.ActionLink("Add New Page", "AddPAge")
 </p>
 
 @if (!Model.Any())
