--- a/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
@@ -16,8 +16,8 @@
 }
 else
 {
-	<table class="table">
-		<tr>
+	<table class="table sorting" id="pages">
+		<tr class="home">
 			<th>
 				Title
 			</th>
@@ -32,7 +32,8 @@ else
 
 		@foreach (var item in Model)
 		{
-			<tr>
+			
+			<tr id="id_@item.Id" class="@item.Slug">
 				<td>
 					@Html.DisplayFor(modelItem => item.Title)
 				</td>
@@ -44,11 +45,11 @@ else
 				</td>
 				<td>
 					@Html.ActionLink("Edit", "EditPage", new { id = item.Id }) |
-					@Html.ActionLink("Details", "PageDetails", new { id = item.Id }) 
+					@Html.ActionLink("Details", "PageDetails", new { id = item.Id })
 					@if (item.Slug != "home")
-					{ 
-					<span>|</span>
-					 @Html.ActionLink("Delete", "DeletePage", new { id = item.Id },new { @class = "delete"})
+					{
+						<span>|</span>
+						@Html.ActionLink("Delete", "DeletePage", new { id = item.Id }, new { @class = "delete" })
 					}
 				</td>
 			</tr>
@@ -59,15 +60,30 @@ else
 }
 
 @section Scripts{
+	<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
-<script>
-
-	$(function () {
-		$("a.delete").click(function () {
-			if (!confirm("Confirm Page Deletion")) return false;
+	<script>
+		/*Confirm prilikom brisanja stranice */
+		$(function () {
+			$("a.delete").click(function () {
+				if (!confirm("Confirm Page Deletion")) return false;
+			});
 		});
-	});
-
-</script>
+		/*Odaberi tbody u svakoj tabeli sa id(page) i na nju pozovi funkciju sortable koja je sastavni deo jqueri-ui lib. */
+		$("table#pages tbody").sortable({
+			/*nece vaziti za item koji ima clasu home na sebi*/
+			items: "tr:not(.home)",
+			//Postavi klasu(trenuntu)
+			placeholder: "ui-state-highlight",
+			update: function () {
+				//novi var gde odabitamo tbody i serializujemo ga
+				var ids = $("table#pages tbody").sortable("serialize");
+				//pravimo privremeni url
+				var url = "/Admin/Pages/ReorderPages";
+				//AJAX poziv u koji ubacujemo url i id odabrane stranice koju vucemo
+				$.post(url, ids, function (data) {
+				});
+			}});
+	</script>
 
 }
