--- a/ShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,8 +19,11 @@
 				<a href="/admin/dashboard" class="navbar-brand">Dashboard</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+				<ul class="nav navbar-nav">
+					<li><a href="/admin/pages">Pages</a></li>
+					<li><a href="/admin/pages/EditSidebar">Sidebar</a></li>
+
+				</ul>
 				<ul class="navbar-right">
 					<li><a href="/" class="navbar-brand" target="_blank">ShoppingCart</a></li>
 				</ul>
