--- a/ShoppingCart/Content/Site.css
+++ b/ShoppingCart/Content/Site.css
@@ -5,3 +5,14 @@
 .ui-state-highlight {
 	border: 1px dashed #ccc;
 }
+
+div.new-category {
+	margin-top: 30px;
+	position:relative;
+}
+span.ajax-text {
+	display: none;
+}
+table.sorting.categories td{
+	padding :20px !important;
+}
