Edit product added.

--- a/ShoppingCart/Areas/Admin/Views/Shop/AddProducts.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shop/AddProducts.cshtml
@@ -46,7 +46,7 @@
 		</div>
 
 		<div class="form-group">
-			<label class="control-label col-md-2" for="HasSidebar">Category</label>
+			<label class="control-label col-md-2" for="Category">Category</label>
 			<div class="col-md-10">
 				@Html.DropDownListFor(model => model.CategoryId, Model.Categories, "Select Category", new { @class = "form-control" })
 				@Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
