--- a/ShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
@@ -1,76 +1,121 @@
 ﻿@model ShoppingCart.Models.ViewModels.Shop.ProductsVM
 
 @{
-    ViewBag.Title = "Edit Product";
+	ViewBag.Title = "Edit Product";
 }
 
 <h2>Edit Product</h2>
+<div>
+	@Html.ActionLink("Back to Products", "Products")
+</div>
+<style>
+	input#ImageName {
+		display: none;
+	}
+</style>
 
-@using (Html.BeginForm("EditProduct", "Shop", FormMethod.Post,new {enctype = "multipart/form-data"}))
+@if (TempData["SM"] != null)
 {
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-
-	<hr />
-	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-	@Html.HiddenFor(model => model.Id)
-
-	<div class="form-group">
-		@Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-		</div>
+	<div class="alert alert-success">
+		@TempData["SM"]
 	</div>
+}
 
-	<div class="form-group">
-		@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
-			@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-		</div>
-	</div>
+@using (Html.BeginForm("EditProduct", "Shop", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+	@Html.AntiForgeryToken()
 
-	<div class="form-group">
-		@Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-		<div class="col-md-10">
-			@Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-			@Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-		</div>
-	</div>
+	<div class="form-horizontal">
 
-	<div class="form-group">
-		<label class="control-label col-md-2" for="Category">Category</label>
-		<div class="col-md-10">
-			@Html.DropDownListFor(model => model.CategoryId, Model.Categories,new { @class = "form-control" })
-			@Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
-		</div>
-	</div>
+		<hr />
+		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+		@Html.HiddenFor(model => model.Id)
 
-	<div class="form-group">
-		<label class="control-label col-md-2" for="ImageName">Image Name</label>
-		@Html.EditorFor(model => model.ImageName, new { htmlAttributes = new { @class = "form-control" } })
-		<div class="col-md-10">
-			<img src="/Images/Uploads/Products/@Model.Id/Thumbs/@Model.ImageName" />
-			<br /><br /><br />
-			<!--Da moze da se vidi slika koja je uplodovana-->
-			<img id="imgPreview" src="#" />
-			<br /><br /><br />
+		<div class="form-group">
+			@Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
-				<input type="file" name="file" id="ImageUpload" />
+				@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-md-2" for="Category">Category</label>
+			<div class="col-md-10">
+				@Html.DropDownListFor(model => model.CategoryId, Model.Categories, new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="control-label col-md-2" for="ImageName">Image Name</label>
+			@Html.EditorFor(model => model.ImageName, new { htmlAttributes = new { @class = "form-control" } })
+			<div class="col-md-10">
+				<img src="/Images/Uploads/Products/@Model.Id/Thumbs/@Model.ImageName" />
+				<br /><br /><br />
+				<!--Da moze da se vidi slika koja je uplodovana-->
+				<img id="imgPreview" src="#" />
+				<br /><br /><br />
+				<div class="col-md-10">
+					<input type="file" name="file" id="ImageUpload" />
+				</div>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-md-offset-2 col-md-10">
+				<input type="submit" value="Edit Product" class="btn btn-default" />
 			</div>
 		</div>
 	</div>
-
-	<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Edit Product" class="btn btn-default" />
-		</div>
-	</div>
-</div>
 }
 
-<div>
-    @Html.ActionLink("Back to Products", "Products")
-</div>
+@section Scripts{
+
+	<script>
+
+		$(function () {
+
+			//Pogled na izabranu sliku
+			function readURL(input) {
+				if (input.files && input.files[0]) {
+					var reader = new FileReader();
+
+					reader.onload = function (e) {
+						$("img#imgPreview").attr("src", e.target.result).width(200).height(200);
+
+					}
+
+					reader.readAsDataURL(input.files[0]);
+				}
+			}
+			//Kada se promeni slika pozovi read url
+			$("#ImageUpload").change(function () {
+				readURL(this);
+			});
+		});
+
+
+
+
+	</script>
+
+}
+
+
