Added a posibility to add more than one image using dropzone,had some problems to send id through dropezone sender to controller so i embeded id directly to url.

--- a/ShoppingCart/Areas/Admin/Views/Shop/Products.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shop/Products.cshtml
@@ -56,7 +56,7 @@
 			</td>
 			<td>
 				@Html.ActionLink("Edit", "EditProduct", new { id = product.Id }) |
-				@Html.ActionLink("Delete", "DeleteProduct", new { id = product.Id })
+				@Html.ActionLink("Delete", "DeleteProduct", new { id = product.Id }, new { @class = "delete" })
 			</td>
 		</tr>
 	}
@@ -87,7 +87,7 @@
 		/*Confirm prilikom brisanja stranice */
 		
 			$("a.delete").click(function () {
-				if (!confirm("Confirm Page Deletion")) return false;
+				if (!confirm("Confirm Product Deletion")) return false;
 			});
 		});
 		
