--- a/ShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shop/EditProduct.cshtml
@@ -84,11 +84,40 @@
 			</div>
 		</div>
 	</div>
+	
 }
 
+<hr />
+
+@if (!Model.GalleryImages.Any())
+{
+	<h2>There are no gallery images for this product</h2>
+}
+
+<form action="/admin/shop/SaveGalleryImages?id=@Model.Id" method="post" enctype="multipart/form-data" class="dropzone" id="dropForm">
+	<div class="fallback">
+		<input type="file" name="file" multiple />
+		<input type="submit" value="Upload" />
+	</div>
+</form>
+<br /><br /><br />
+
+@foreach (var img in Model.GalleryImages)
+{
+	<div style="display : inline-block">
+		<img src="/Images/Uploads/Products/@Model.Id/Gallery/Thumbs/@img" />
+		@Html.ActionLink("Delete", "DeleteImage", "Shop", new { @class = "deleteImg", data_name = img })
+	</div>
+}
+<link href="~/Scripts/dropzone/basic.css" rel="stylesheet" />
+<link href="~/Scripts/dropzone/dropzone.css" rel="stylesheet" />
 @section Scripts{
 
+	<script src="~/Scripts/dropzone/dropzone.js"></script>
+
 	<script>
+
+		var Id = @Model.Id;
 
 		$(function () {
 
@@ -108,7 +137,25 @@
 			//Kada se promeni slika pozovi read url
 			$("#ImageUpload").change(function () {
 				readURL(this);
+
 			});
+
+			//Ubacivanje Dropzone.js
+
+			Dropzone.options.dropForm = {
+				acceptedFiles: "image/*",
+				init: function () {
+					this.on("complete", function (file) {
+						//Ukoliko nema vise faljlova za upload i u que takodje nema vise fajlova za upload osvezi lokaciju
+						if (this.getUploadingFiles().length === 0 && this.getQueuedFiles().length === 0)
+						{
+							loaction.reload();
+						}
+					});
+
+					
+				}
+			};
 		});
 
 
