Added a shop controller,and a category partial view and also added a new route to it.

--- a/ShoppingCart/Views/Pages/Index.cshtml
+++ b/ShoppingCart/Views/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ShoppingCart.Models.ViewModels.Pages.PageVM
 
 @{
-    ViewBag.Title = ViewBag.PageTitle;
+	ViewBag.Title = ViewBag.PageTitle;
+	TempData["HighlightPageTitle"] = ViewBag.PageTitle;
 }
 
 @Html.Raw(Model.Body)
