--- a/ShoppingCart/Views/Pages/PagesMenuPartialView.cshtml
+++ b/ShoppingCart/Views/Pages/PagesMenuPartialView.cshtml
@@ -1,7 +1,19 @@
 ﻿@model IEnumerable<ShoppingCart.Models.ViewModels.Pages.PageVM>
 
+@{
+	string tempPageTitle = (string)TempData["HighlightPageTitle"];
+}
 
-@foreach (var item in Model) {
-  <li><a href="/@item.Slug">@item.Title</a></li>
+@foreach (var item in Model)
+{
+	if (tempPageTitle == item.Title)
+	{
+		<li class="active"><a href="/@item.Slug">@item.Title</a></li>
+	}
+	else
+	{
+		<li><a href="/@item.Slug">@item.Title</a></li>
+	}
+
 }
 
