--- a/ShoppingCart/Content/Site.css
+++ b/ShoppingCart/Content/Site.css
@@ -19,3 +19,14 @@ table.sorting.categories td{
 .ajaxdivtd {
 	position:absolute;
 }
+span.ajaxmsg {
+    background:green;
+    color: white;
+    padding: 10px;
+    display: none;
+    position:absolute;
+    bottom: 0;
+}
+span.loader{
+    display: none;
+}
