--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -20,7 +20,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @Html.Action("PagesMenuPartialView", "Pages");
+                    @Html.Action("PagesMenuPartialView", "Pages")
+                </ul>
+                <ul class="navbar-collapse collapse navbar-right">
+                    @Html.Action("CartPartialView", "Cart")
                 </ul>
             </div>
         </div>
