At checkout it can increment  products now,and it reflects on total and gt,used ajax json.

--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -6,77 +6,114 @@
 
 <h2>Cart Details</h2>
 
-@if(ViewBag.Msg != null)
+@if (ViewBag.Msg != null)
 {
     <h3>@ViewBag.Msg</h3>
 }
 else
 {
 
-<table class="table">
-    <tr>
+    <table class="table">
+        <tr>
 
-        <th>
-            Name
-        </th>
-        <th>
-            Quantity
-        </th>
-        <th>
-            Price
-        </th>
-        <th>
-            Image
-        </th>
-        <th>
+            <th>
+                Name
+            </th>
+            <th>
+                Quantity
+            </th>
+            <th>
+                Price
+            </th>
+            <th>
+                Image
+            </th>
+            <th>
 
-        </th>
-        <th>
-            Total
-        </th>
-        <th>
+            </th>
+            <th>
+                Total
+            </th>
+            <th>
 
-        </th>
+            </th>
 
 
-    </tr>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
+        @foreach (var item in Model)
+        {
+            <tr>
 
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            <img src="/Images/Uploads/Products/@item.ProductId/Thumbs/@item.Image" />
-        </td>
-        <td>
-            <a href="#" class="increment-product" data-id="@item.ProductId">+</a>
-            <a href="#" class="decrement-product" data-id="@item.ProductId">-</a>
-            <a href="#" class="remove-product" data-id="@item.ProductId">Remove</a>
-        </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                </td>
+                <td class="quantity@(item.ProductId)">
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    $@Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    <img src="/Images/Uploads/Products/@item.ProductId/Thumbs/@item.Image" />
+                </td>
+                <td>
+                    <a href="#" class="increment-product" data-id="@item.ProductId">+</a>
+                    <a href="#" class="decrement-product" data-id="@item.ProductId">-</a>
+                    <a href="#" class="remove-product" data-id="@item.ProductId">Remove</a>
+                </td>
 
-        <td>
-            $@Html.DisplayFor(modelItem => item.Total)
-        </td>
+                <td class="total@(item.ProductId)">
+                    $@Html.DisplayFor(modelItem => item.Total)
+                </td>
 
-    </tr>
+            </tr>
+        }
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="grandtotal"><b>Total:</b> $<span>@ViewBag.Total</span></td>
+
+        </tr>
+    </table>
 }
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>$@ViewBag.Total</td>
 
-    </tr>
-</table>
+@section Scripts{
+    <script>
+		
+        $(function () {
+            /*Incrementuj product */
+            $("a.increment-product").click(function (e) {
+                e.preventDefault();
+
+                //prosledjeno AjAX-om
+                var productId = $(this).data("id");
+                var url = "/cart/IncrementProduct";
+
+                $.getJSON(url, { productId: productId }, function (data) {
+                    $("td.quantity" + productId).html(data.quantity);
+
+                    var price = data.quantity * data.price;
+
+                    var priceHtml = "$" + price.toFixed(2);
+
+                    $("td.total" + productId).html(priceHtml);
+
+                    var grandTotal = parseFloat($("td.grandtotal span").text());
+
+                    var gt = (grandTotal + data.price).toFixed(2);
+
+                    $("td.grandtotal span").text(gt);
+                });
+            });
+
+		});
+		
+			
+    </script>
+
 }
