Started working on implementing paypal,add some css to style div-s where it will be paypal form,also added 2 new tables tblorder,and tblorderdetails that will be used for paypa interaction,added a paypal partila view,and expanded ajax for incr. and decrement so it would work with paypal partial view also.

--- a/ShoppingCart/Content/Site.css
+++ b/ShoppingCart/Content/Site.css
@@ -37,3 +37,24 @@ span.loader{
 .inlineb{
     display:inline-block !important;
 }
+ul.adminarea{
+    position:relative;
+    top:15px;
+}
+.ajaxBg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: none;
+}
+.ajaxBg span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%,-50%,0);
+}
+form.paypalForm{
+    position:absolute;
+    left: -3000px;
+}
