--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Cart Details";
+    int count = 1;
 }
 
 <h2>Cart Details</h2>
@@ -12,6 +13,10 @@
 }
 else
 {
+
+    <div class="ajaxBg"><span>
+    <img src="~/Content/Img/Wedges-3s-16px.gif" />
+    </span></div>
 
     <table class="table">
         <tr>
@@ -80,11 +85,32 @@ else
 
         </tr>
     </table>
+    <div class="paypalDiv">
+        <form class="paypalForm" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_cart">
+            <input type="hidden" name="upload" value="1">
+            <input type="hidden" name="business" value=" kerkion1984-facilitator@gmail.com">
+
+            @foreach (var item in Model)
+            {
+                <input type="hidden" name="item_name_@count" value="@item.ProductName">
+                <input type="hidden" name="amount_@count" value="@item.Price">
+                <input type="hidden" name="quantity_@count" value="@item.Quantity">
+                count++;
+            }
+
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="image" src="http://www.paypal.com/en_US/i/btn/x-click-but01.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+        </form>
+    </div>
+    <br />
+
+    <a href="#" class="placeOrder btn btn-primary pull-right">Checkout</a>
 }
 
 @section Scripts{
     <script>
-		
+
         $(function () {
             /*Incrementuj product */
             $("a.increment-product").click(function (e) {
@@ -108,6 +134,11 @@ else
                     var gt = (grandTotal + data.price).toFixed(2);
 
                     $("td.grandtotal span").text(gt);
+                }).done(function (data) {
+                    var url1 = "/cart/PaypalPartialView";
+                    $.get(url1, {}, function (data) {
+                        $("div.paypalDiv").html(data);
+                    });
                 });
             });
 
@@ -122,14 +153,12 @@ else
 
                 $.getJSON(url, { productId: productId }, function (data) {
 
-                    if (data.quantity <= 0)
-                    {
+                    if (data.quantity <= 0) {
                         $this.parent().parent().fadeOut("fast", function () {
                             location.reload();
                         });
                     }
-                    else
-                    {
+                    else {
                         $("td.quantity" + productId).html(data.quantity);
 
                         var price = data.quantity * data.price;
@@ -145,6 +174,11 @@ else
                         $("td.grandtotal span").text(gt);
                     }
 
+                }).done(function (data) {
+                    var url1 = "/cart/PaypalPartialView";
+                    $.get(url1, {}, function (data) {
+                        $("div.paypalDiv").html(data);
+                    });
                 });
             });
             /*Otkloni product */
@@ -161,9 +195,9 @@ else
                 });
             });
 
-		});
-		
-			
+        });
+
+
     </script>
 
 }
