--- a/ShoppingCart/Views/Shop/ProductDetails.cshtml
+++ b/ShoppingCart/Views/Shop/ProductDetails.cshtml
@@ -16,7 +16,11 @@
         @Html.DisplayFor(model => model.Description)
         <br />
         $@Html.DisplayFor(model => model.Price)
+
         <br />
+
+        @if (Request.IsAuthenticated)
+        {
         <div class="add-to-cart">
             <a href="#" class="addtocart">Add To Cart</a>
             <span class="loader">
@@ -24,6 +28,7 @@
             </span>
             <span class="ajaxmsg">The product has been added to cart.</span>
         </div>
+        }
     </div>
 </div>
 
