--- a/ShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,13 +19,14 @@
 				<a href="/admin/dashboard" class="navbar-brand">Dashboard</a>
             </div>
             <div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<li><a href="/admin/pages">Pages</a></li>
-					<li><a href="/admin/pages/EditSidebar">Sidebar</a></li>
-					<li><a href="/admin/shop/Categories">Categories</a></li>
-					<li><a href="/admin/shop/Products">Products</a></li>
+                <ul class="nav navbar-nav">
+                    <li><a href="/admin/pages">Pages</a></li>
+                    <li><a href="/admin/pages/EditSidebar">Sidebar</a></li>
+                    <li><a href="/admin/shop/Categories">Categories</a></li>
+                    <li><a href="/admin/shop/Products">Products</a></li>
+                    <li><a href="/admin/shop/Orders">Orders</a></li>
 
-				</ul>
+                </ul>
 				<ul class="navbar-right">
 					<li><a href="/" class="navbar-brand" target="_blank">ShoppingCart</a></li>
 				</ul>
