--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     }
                     @if (Request.IsAuthenticated && User.IsInRole("user"))
                     {
-                        if (ViewBag.Title == "User Profile")
+                        if (ViewBag.Title == "User Profile" || ViewBag.Title == "Orders")
                         {
                             <li class="active">@Html.Action("UserPartialNav", "Account", new { area = "" })</li>
                         }
@@ -54,7 +54,7 @@
                 @if (Request.IsAuthenticated && User.IsInRole("admin"))
                 {
                     <ul class="navbar-collapse collapse navbar-right adminarea">
-                        <li>@Html.ActionLink("Admin Area", "Index", "Dashboard", new { area = "Admin"},null)</li>
+                        <li>@Html.ActionLink("Admin Area", "Index", "Dashboard", new { area = "Admin" }, null)</li>
                     </ul>
                 }
                 else
@@ -77,9 +77,31 @@
                     <img src="~/Content/Img/Wedges-3s-16px.gif" />
                 </span>
             </div>
-            <div class="col-xs-12 col-md-2">
-                @Html.Action("CategoryMenuPartialView", "Shop")
-            </div>
+
+            @if (ViewBag.Title != "Create Account" && ViewBag.Title != "Login" && ViewBag.Title != "User Profile" && ViewBag.Title != "Orders")
+            {
+                <div class="col-xs-12 col-md-2">
+                    @Html.Action("CategoryMenuPartialView", "Shop")
+                </div>
+            }
+
+            @if (ViewBag.Title == "User Profile")
+            {
+                <div class="col-xs-12 col-md-2">
+                    <ul>
+                        <li><a href="/account/orders">My Orders</a></li>
+                    </ul>
+                </div>
+            }
+
+            @if (ViewBag.Title == "Orders")
+            {
+                <div class="col-xs-12 col-md-2">
+                    <ul>
+                        <li><a href="/account/user-profile">My Profile</a></li>
+                    </ul>
+                </div>
+            }
 
             <!--Provera za sidebar-->
             @if (ViewBag.Sidebar == "Yes")
